--- a/about.html
+++ b/about.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Myint Myat</title>
+    <title>About</title>
 </head>
 <body>
-    zero to pro batch 11 boot camp
+    <h1>This is About page</h1>
 </body>
 </html>
