--- a/index.html
+++ b/index.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Myint Myat</title>
+    <script>
+        alert('Hello!')
+    </script>
+    <style>
+        body {
+            color: green;
+            background-color: grey;
+        }
+    </style>
 </head>
+
 <body>
-    zero to pro batch 11 boot camp
+    <h1>Heading 1</h1>
+    <h2>Heading 2</h2>
+    <h3>Heading 3</h3>
+    first <h4>Heading 4</h4> last
+    <h5>Heading 5</h5>
+    <h6>Heading 6</h6>
+
+    <p>This is patagraph 1</p>
+    <p>This is paragraph 2</p>
+
+    first <div style="color: blue">This is a devision with normal text coor testing <span>color and</span> </div> last
+
+    <a href="about.html" title="Go to about page"> ABOUT </a>
+    Welcome to Zero to pro bootcamp level 4 batch 11
+    <a href="http://www.myanmaritc.com">Myanmar ITC</a>
+
+    <br>
+    <img src="1.png" alt="This is logo">
+    <br>
+    <a href="http://www.google.com">
+        <img src="4.png" alt="logo">
+    </a>
 </body>
+
 </html>
