--- a/a1/a1.html
+++ b/a1/a1.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Assigment 1</title>
 </head>
 <body>
-    <h1>This is About page</h1>
-</body>
+     <a href="../index.html">Home</a>
+     <h1>Assigment 1</h1>
+     This is assigment 1.
 
-    <a href="a1/a1.html">Assigment 1</a>
+     <img src="../images/2.jpg" alt="">
+</body>
 </html>
