--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
     <p>This is patagraph 1</p>
     <p>This is paragraph 2</p>
 
-    first <div style="color: blue">This is a devision with normal text coor testing <span>color and</span> </div> last
+    first <div style="color: blue">This is a devision with normal text coor testing <span style="color:red">color and</span> </div> last
 
     <a href="about.html" title="Go to about page"> ABOUT </a>
     Welcome to Zero to pro bootcamp level 4 batch 11
-    <a href="http://www.myanmaritc.com">Myanmar ITC</a>
+    <a href="https://myanmaritc.com/">Myanmar ITC</a>
 
     <br>
-    <img src="1.png" alt="This is logo">
+    <img src="images/1.png" alt="This is logo">
     <br>
     <a href="http://www.google.com">
-        <img src="4.png" alt="logo">
+        <img src="images/4.png" alt="logo">
     </a>
 </body>
 
