HTML link lessons

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     <p>This is patagraph 1</p>
     <p>This is paragraph 2</p>
 
-    first <div style="color: blue">This is a devision with normal text coor testing <span style="color:red">color and</span> </div> last
+    first <div style="color: blue">This is a devision with normal text coor testing <span style="color:red">color
+            and</span> </div> last
 
     <a href="about.html" title="Go to about page"> ABOUT </a>
     Welcome to Zero to pro bootcamp level 4 batch 11
