--- a/HTML/table2.html
+++ b/HTML/table2.html
@@ -48,7 +48,7 @@
         </tfoot>
     </table>
     <h1>Monthly save Money</h1>
-    <table border="1" cellspacinh="0" cellpadding="15">
+    <table border="1" cellspacing="0" cellpadding="15">
         <thead>
             <tr>
                 <th>Month</th>
