--- a/HTML/form.html
+++ b/HTML/form.html
@@ -33,6 +33,29 @@
     <input type="radio" name="gender" id="other" value="other">
     <label for="other">Other</label>
     <br><br>
+    <label for="">Hobby</label>
+    <input type="checkbox" name="reading" id="reading" value="reading"><label for="reading">Reading</label>
+    <input type="checkbox" name="travelling" id="travelling" value="travelling"> <label for="travelling">Travelling</label> 
+    <input type="checkbox" name="gaming" id="gaming" value="gaming"><label for="gaming">Gaming</label>
+    <br><br>
+    <select name="year" id="year">
+        <option value="">Choose Your Year</option>
+        <option value="First">First Year</option>
+        <option value="Second">Second Year</option>
+        <option value="Third">Third Year</option>
+    </select>
+    <br><br>
+    <label for="dob">Birthday</label>
+    <input type="date" name="stu_dob" id="dob">
+    <br><br>
+    <label for="address">Address</label>
+    <textarea name="stu_address" id="address" cols="30" rows="10"></textarea>
+    <br><br>
+    <input type="time" name="" id="">
+    <input type="datetime-local">
+    <input type="color" name="color" id="">
+    <input type="range" id="" name="range" value=15">
+    <br><br>
     <button type="submit">Submit</button>
 </body>
 </html>
