--- a/HTML/assigmentfolder/HTMLassign.html
+++ b/HTML/assigmentfolder/HTMLassign.html
@@ -12,7 +12,7 @@
     <a href="#early">Description</a>
     <a href="#Music">Music Albums</a>
     <a href="#pas">Comments</a>
-    <table border="1" cellspacing="0" align="center">
+    <table border="1" cellspacing="0" align="center" cellpadding="10">
         <tr>
             <td rowspan="8"><img src="../assigmentfolder/MJ_image/MJ.webp" width="500px" height="500px" alt="MJ_image"></td>
             <th>Full name</th>
@@ -58,7 +58,7 @@
     <hr>
     <br>
     <h2  id="Music">Music Albums</h2>
-    <table border="1" cellspacing="0" align="center">
+    <table border="1" cellspacing="0" align="center" cellpadding="5">
         <tr>
             <th>Title</th>
             <th>Year</th>
