--- a/JavaScript/BMIassigment.html
+++ b/JavaScript/BMIassigment.html
@@ -1,22 +1,65 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="JS_lastassigment.html">
-    <link rel="stylesheet" href="style2.css">
-    <title>Document</title>
+ <title>BMI</title>
+ <link rel="stylesheet" type="text/css" href="style.css">
+    <style>
+        *{
+            margin: 0px;
+            padding: 0px;
+        }
+        .form{
+            width: 25%;
+            margin-top: 100px;
+            margin: auto;
+        }
+        .form h1{
+            margin-top: 100px;
+            margin-bottom: 10px;
+        }
+        input[type="text"],input[type="number"]{
+            width: 100%;
+            padding: 10px;
+            border-radius: 5px;
+            outline:none;
+            border: 1px solid gray;
+        }
+        .span{
+            color: red;
+            font-size: 14px;
+            display: block;
+            margin-bottom: 10px;
+        }
+        .calculate{
+            padding: 10px 20px;
+            background-color: gray;
+            outline: none;
+            margin-top: 10px;
+            color: white;
+            border-radius: 5px;
+            border:1px solid gray;
+        }
+    </style>
 </head>
-<body class="textalign">
-    <h1 class="h1font">BMI Calculator</h1>
-    <div>
-        weight(lbs)
-        <br>
-        <label for="weight" class="labelpad"></label>
-        <input type="number" id="number" name="number">
-        <br>
-        This fild is required!
-    </div>
+<body>
+ <form class="form">
+  <h1>BMI Calculator</h1>
+  <div>
+   <label>Weight(lbs)</label>
+   <input type="number" name="" id="weight">
+   <span class="span">This Field is Required!</span>
+  </div>
+  <div>
+   <label>Foot(ft)</label>
+   <input type="number" name="" id="ft">
+   <span class="span">This Field is Required!</span>   
+  </div>
+  <div>
+   <label>Inches(inc)</label>
+   <input type="number" name="" id="inc">
+   <span class="span">This Field is Required!</span>   
+  </div>
+  <button class="calculate" onclick="">Calculate</button>
+ </form>
 </body>
 </html>
